build: install react-qr-scanner

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^8.2.4",
     "@mantine/hooks": "^8.2.4",
+    "@yudiel/react-qr-scanner": "^2.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
