--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@mantine/core": "^8.2.4",
     "@mantine/hooks": "^8.2.4",
+    "@tanstack/react-query": "^5.85.0",
     "@yudiel/react-qr-scanner": "^2.3.1",
+    "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
